--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,10 @@ div.translation span{
 	margin-bottom: 1.5%;
 	
 }
+footer{
+	text-align: center;
+	margin-bottom: 2.5%;
+}
 /* ================Article style================================ */
 .article{
 	height: 1594px;
