modified litle prince page

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
 body{
 	font-family: 'Brygada 1918', serif;
 	line-height: 1.65;
+	width: 100%;
+	text-align: justify;
+	/* min-height: 100%; */
+	/* margin: 0 auto 0; */
 }
 
 #heading{
@@ -20,7 +24,7 @@ body{
 	font-size: 30px;
 	text-align: center;
 	color: #a5a58d;
-	padding: 35px 0 20px 0;
+	padding: 20px 0;
 }
 .summary-item{
 	display: inline-block;
@@ -29,36 +33,48 @@ body{
 	font-family: 'Comfortaa', cursive;
 	margin: 0 45px 0;
 }
-.summary{
-	margin: 30px 0 0 0 ;
+div.intoduction-block{
+	max-width: 80%;
+	margin: 0 auto 0;
+	padding-top: 75px
 }
 div.introduction{
-	max-width: 65%;
+	max-width: 60%;
 	/* line-height: 1.6; */
-	padding-top: 75px;
+	/* padding-top: 75px; */
    margin: auto;
    display: inline-block;
+	/* text-align: justify; */
 }
 
 .img-litle-prince{
 	height: 400px;
 	width: 400px;
-	margin: 50px 20px 0 20px ;
+	/* margin: 50px 20px 0 20px ; */
 }
 .p-little-prince{
 	text-indent:50px;
+	/* padding-left: 35px; */
+}
+.paralel-box{
+	max-width: 90%;
+	margin: 0 auto 0;
+	/* max-height: 412px; */
+	
 }
 div.history{
-	max-width: 700px;
+	max-width: 45%;
 	margin: 0 0 0 75px;
 	display: inline-block;
+	/* text-align: justify; */
 }
 div.plot{
-	max-width: 700px;
-	max-height: 450px;
+	max-width: 45%;
+	max-height: 440px;
 	padding: 0 0 0 50px;
 	display: inline-block;
 	overflow: auto;
+	/* text-align: justify; */
 }
 .a-little-prince{
 	text-decoration: underline;
@@ -69,15 +85,15 @@ div.plot{
 	color: #b7b7a4;
 	font-size: 25px;
 	text-align: center;
-	padding-top: 1%;
+	/* padding-top: 1%; */
 }
 
 div.translation,
 div.prototypes,
 div.screening
 {
-	max-width: 90%;
-	margin: 0px auto 20px;
+	max-width: 80%;
+	margin: 0 auto 0;
 }
 div.translation span{
 	display: block;
@@ -89,7 +105,7 @@ div.translation span{
 
 .publications-list{
 	display: inline-block;
-	margin: 0 45px 20px;
+	padding: 0 45px 20px;
 
 }
 .center {  
@@ -98,8 +114,8 @@ div.translation span{
 
 .image-block{
 	width: 60%;
-	height: 60%;
-	margin-bottom: 1.5%;
+	/* height: 60%; */
+	margin: 1.5% 0;
 	
 }
 footer{
@@ -108,9 +124,9 @@ footer{
 }
 /* ================Article style================================ */
 .article{
-	height: 1594px;
+	/* height: 1594px; */
 	width: 810px;
-	margin: 152px 765px 0 345px;
+	padding: 203px 765px 0 345px;
 	font-family: 'Lato', sans-serif;
 	
 
