--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Brygada+1918&family=Comfortaa:wght@300;500;700&family=Pattaya&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 
-body{
+body.little-prince{
 	font-family: 'Brygada 1918', serif;
 	line-height: 1.65;
 	width: 100%;
 	text-align: justify;
-	/* min-height: 100%; */
-	/* margin: 0 auto 0; */
 }
 
 #heading{
@@ -40,33 +38,26 @@ div.intoduction-block{
 }
 div.introduction{
 	max-width: 60%;
-	/* line-height: 1.6; */
-	/* padding-top: 75px; */
    margin: auto;
    display: inline-block;
-	/* text-align: justify; */
 }
 
 .img-litle-prince{
 	height: 400px;
 	width: 400px;
-	/* margin: 50px 20px 0 20px ; */
 }
 .p-little-prince{
 	text-indent:50px;
-	/* padding-left: 35px; */
 }
 .paralel-box{
 	max-width: 90%;
 	margin: 0 auto 0;
-	/* max-height: 412px; */
 	
 }
 div.history{
 	max-width: 45%;
 	margin: 0 0 0 75px;
 	display: inline-block;
-	/* text-align: justify; */
 }
 div.plot{
 	max-width: 45%;
@@ -74,7 +65,6 @@ div.plot{
 	padding: 0 0 0 50px;
 	display: inline-block;
 	overflow: auto;
-	/* text-align: justify; */
 }
 .a-little-prince{
 	text-decoration: underline;
@@ -85,7 +75,6 @@ div.plot{
 	color: #b7b7a4;
 	font-size: 25px;
 	text-align: center;
-	/* padding-top: 1%; */
 }
 
 div.translation,
@@ -114,7 +103,6 @@ div.translation span{
 
 .image-block{
 	width: 60%;
-	/* height: 60%; */
 	margin: 1.5% 0;
 	
 }
@@ -124,49 +112,56 @@ footer{
 }
 /* ================Article style================================ */
 .article{
-	/* height: 1594px; */
-	width: 810px;
-	padding: 203px 765px 0 345px;
+	/* width: 100%; */
 	font-family: 'Lato', sans-serif;
-	
-
+	font-size: 16px;
+	line-height: 1.6;
+	color: #424551;
+}
+.wrapper-article{
+	max-width: 42.18%;
+	margin: 11% 40% 0 18%;
 }
 .article-h1{
 	font-weight: 900;
 	font-size: 46px;
-	margin: 203px 0 101px;
 }
 .article-image{
-	margin-bottom: 70px;
+	margin-top: 13%;
+	margin-bottom: 10%;
 }
-
-.article-p{
-	text-indent: 0 
+.article-img{
+	max-width:100%;
+	max-height:100%;
 }
 .bold-paragraph{
 	font-size: 20px;
 	font-weight: 700;
+	color: #1E212C;;
 	line-height: 1.5;
+
+}
+.bold-text{
+	margin-bottom: 3%;
 	margin-bottom: 24px;
 }
 .ordinar-font{
-	font-size: 16px;
 	font-weight: 400;
-	line-height: 1.5;
 }
 .second-paragraf{
-	margin-bottom: 35px;
+	margin-bottom: 5%;
 }
 .third-paragraph{
-	margin-bottom: 55px;
+	margin-bottom: 8%;
 }
 .article-quote{
 	padding-left: 58px;
-	margin: 55px 0;
+	padding-left: 9%;
+	padding-bottom: 7%;
 }
 .list{
 	line-height: 1.6;
-	margin: 36px 0 36px 37px;
+	padding: 5% 0 5% 5%;
 }
 .list-items{
 	margin-bottom: 4px;
